--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,6 +40,7 @@ subjects:
 - !lcc 'LB'
 - !lcsh 'Children''s stories, American'
 - !lcc 'PZ'
+- GITenberg
 title: 'Here and Now Story Book
 
   Two- to seven-year-olds'
